Made music icons responsive, added img to bottom, fixed nav collapse

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -159,3 +159,7 @@ footer{
 .cardBG2{
   background-color: $color-yellow;
 }
+
+.musicImg{
+  padding: 15px;
+}
